--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,120 +10,12 @@
     android:orientation="vertical"
     tools:context="com.twismart.thechat.Register">
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/inputName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:textSize="20sp"
-            android:hint="@string/register.input.name" />
-
-    </android.support.design.widget.TextInputLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="#000"
-            android:textSize="20sp"
-            android:text="@string/register.avatar" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imgAvatar"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="8dp"
-            android:onClick="setAvatar"
-            android:src="@mipmap/ic_launcher" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/register.input.gender"
-            android:textColor="#000"
-            android:textSize="20sp" />
-
-        <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal">
-
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/register.option.female"
-                android:textSize="20sp"
-                android:id="@+id/optionFemale" />
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/register.option.male"
-                android:layout_marginLeft="20dp"
-                android:textSize="20sp"
-                android:id="@+id/optionMale" />
-
-        </RadioGroup>
-
-    </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/birthday"
+    <fragment
+        android:id="@+id/fragmentProfile"
+        android:name="com.twismart.thechat.FragmentProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/register.input.birthday"
-        android:layout_marginTop="20dp"
-        android:onClick="setBirthday"
-        android:textColor="#000"
-        android:textSize="20sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="2dp"
-        android:background="@color/colorAccent"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/register.input.language"
-            android:textColor="#000"
-            android:textSize="20sp" />
-
-        <Spinner
-            android:id="@+id/spinnerLanguages"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="6dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        tools:layout="@layout/fragment_profile" />
 
 
     <Button
