--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical">
 
     <android.support.design.widget.TextInputLayout
@@ -43,7 +38,6 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="8dp"
-            android:onClick="setAvatar"
             android:src="@mipmap/ic_launcher" />
 
     </LinearLayout>
@@ -95,7 +89,6 @@
         android:layout_height="wrap_content"
         android:text="@string/register.input.birthday"
         android:layout_marginTop="20dp"
-        android:onClick="setBirthday"
         android:textColor="#000"
         android:textSize="20sp" />
 
@@ -125,20 +118,27 @@
     </LinearLayout>
 
 
-    <Button
+    <LinearLayout
+        android:id="@+id/linearChanges"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
-        android:onClick="register"
-        android:text="@string/register.button.register"/>
+        android:layout_marginTop="20dp" >
 
+        <Button
+            android:id="@+id/buttonSave"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:text="@string/register.button.savechanges"/>
 
-    <TextView
-        android:id="@+id/textPolicy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/register.text.acceptpolicy" />
+        <Button
+            android:id="@+id/buttonCancel"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:text="@string/register.button.cancelchanges"/>
+    </LinearLayout>
 
 </LinearLayout>
