--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,18 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.twismart.thechat.ChatActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="6dp"
         android:layout_marginBottom="@dimen/chat_heigth_newmessage"
-        android:paddingBottom="4dp"
-        android:background="#fd00dd">
+        android:paddingBottom="4dp">
 
         <LinearLayout
             android:id="@+id/layoutMessages"
@@ -25,9 +21,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/chat_heigth_newmessage"
-        android:layout_gravity="bottom"
-        android:background="#0000fd">
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/chat_heigth_newmessage"
+        android:layout_gravity="bottom">
 
         <EditText
             android:id="@+id/inputNewMessage"
@@ -36,10 +32,13 @@
             android:hint="@string/activity.chat.hint.newmessage"
             android:layout_weight="5"/>
 
-        <Button
+        <ImageButton
             android:layout_width="0px"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+
             android:layout_weight="1"
+            android:src="@drawable/ic_send_black_24dp"
             android:onClick="send"/>
 
     </LinearLayout>
