--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,17 +31,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TheChat"
+            android:textStyle="bold"
+            android:textColor="#000"
             android:textSize="50sp"
             android:layout_gravity="center"/>
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login.bienvenida"
-            android:layout_gravity="center"
-            android:gravity="center"
             android:layout_marginTop="20dp"
-            android:textSize="30sp" />
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:layout_width="0px"
+                android:layout_weight="2.4"
+                android:layout_height="wrap_content"
+                android:text="@string/login.bienvenida"
+                android:textColor="#000"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="22sp" />
+
+            <ImageView
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/iconchat"/>
+
+        </LinearLayout>
 
 
         <Button
@@ -51,6 +69,7 @@
             android:layout_marginRight="32dp"
             android:layout_marginTop="50dp"
             android:layout_gravity="center"
+            android:background="@drawable/btn_google_sign_in_background"
             android:text="@string/login.button.signin"
             android:onClick="signIn"/>
 
