--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="chat_heigth_newmessage">64dp</dimen>
+    <dimen name="chat_heigth_newmessage">48dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_date_size">14sp</dimen>
+    <dimen name="text_message_size">18sp</dimen>
+
+    <dimen name="item_chat_text_name_user_size">18sp</dimen>
+    <dimen name="item_chat_text_distance_size">14sp</dimen>
 </resources>
