--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -89,9 +89,11 @@
 
     <Button
         android:id="@+id/btnStart"
+        android:background="@drawable/btn_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textSize="20sp"
         android:text="@string/find.button.startchat"/>
 
 </LinearLayout>
