--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -128,16 +128,19 @@
             android:id="@+id/buttonSave"
             android:layout_width="0px"
             android:layout_height="wrap_content"
+            android:background="@drawable/btn_background"
             android:layout_weight="1"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:text="@string/register.button.savechanges"/>
 
         <Button
             android:id="@+id/buttonCancel"
             android:layout_width="0px"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/btn_background"
             android:layout_weight="1"
-            android:textSize="20sp"
+            android:textSize="17sp"
             android:text="@string/register.button.cancelchanges"/>
     </LinearLayout>
 
