funcionando antes de enviar imagenes y texto offline

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
 
     <dimen name="item_chat_text_name_user_size">18sp</dimen>
     <dimen name="item_chat_text_distance_size">14sp</dimen>
+
+    <dimen name="img_message_max_heigth">400dp</dimen>
 </resources>
