--- a/app/src/main/res/layout/message_out.xml
+++ b/app/src/main/res/layout/message_out.xml
@@ -20,6 +20,17 @@
             android:textSize="@dimen/text_message_size"
             android:text="Message"/>
 
+        <ImageView
+            android:id="@+id/imgMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxHeight="@dimen/img_message_max_heigth"
+            android:src="@mipmap/ic_launcher"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="8dp"
+            android:adjustViewBounds="true"/>
+
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
