--- a/app/src/main/res/layout/message_in.xml
+++ b/app/src/main/res/layout/message_in.xml
@@ -31,6 +31,16 @@
             android:layout_marginLeft="12dp"
             android:adjustViewBounds="true"/>
 
+
+
+        <ProgressBar
+            android:id="@+id/progressImgLoad"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginRight="12dp"
+            android:layout_marginLeft="8dp" />
+
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
