--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,58 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.twismart.thechat.ChatActivity">
+    android:orientation="vertical"
+    tools:context="com.twismart.thechat.ChatActivity" >
 
-    <ImageView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/background_hd"/>
+        android:layout_height="0px"
+        android:layout_weight="8.5">
 
-    <ScrollView
-        android:id="@+id/scrollMessages"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/chat_heigth_newmessage"
-        android:paddingBottom="4dp">
+        <ImageView
+            android:id="@+id/background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background_hd"/>
+
+        <ScrollView
+            android:id="@+id/scrollMessages"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/chat_heigth_newmessage"
+            android:paddingBottom="4dp">
+
+            <LinearLayout
+                android:id="@+id/layoutMessages"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:orientation="vertical"/>
+        </ScrollView>
 
         <LinearLayout
-            android:id="@+id/layoutMessages"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="6dp"
-            android:paddingBottom="6dp"
-            android:orientation="vertical"/>
-    </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="@dimen/chat_heigth_newmessage"
-        android:focusableInTouchMode="true"
-        android:background="#ffffff"
-        android:layout_gravity="bottom">
-
-        <EditText
-            android:id="@+id/inputNewMessage"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:hint="@string/activity.chat.hint.newmessage"
-            android:backgroundTint="@android:color/transparent"
-            android:inputType="textCapWords"
-            android:layout_weight="5"/>
-
-        <ImageButton
-            android:id="@+id/btnAction"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
+            android:minHeight="@dimen/chat_heigth_newmessage"
+            android:focusableInTouchMode="true"
             android:layout_gravity="bottom"
-            android:background="@android:color/transparent"
-            android:layout_weight="1"
-            android:src="@drawable/ic_camera_alt_black_24dp" />
+            android:background="#ffffff">
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/inputNewMessage"
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:hint="@string/activity.chat.hint.newmessage"
+                android:backgroundTint="@android:color/transparent"
+                android:inputType="textMultiLine|textCapWords"
+                android:singleLine="false"
+                android:layout_weight="5"/>
 
-</FrameLayout>
+            <ImageButton
+                android:id="@+id/btnAction"
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:background="@android:color/transparent"
+                android:layout_weight="1"
+                android:src="@drawable/ic_camera_alt_black_24dp" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnLoadMore"
+            android:onClick="loadMoreMessages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_background"
+            android:alpha="0.8"
+            android:visibility="invisible"
+            android:textColor="#FFFFFF"
+            android:text="@string/activity.chat.btn.loadmore"/>
+
+    </FrameLayout>
+
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/admobAd"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="1"
+        android:layout_gravity="center|bottom"
+        ads:adSize="SMART_BANNER"
+        android:visibility="gone"
+        ads:adUnitId="ca-app-pub-2063878848044934/5991001407">
+    </com.google.android.gms.ads.AdView>
+
+    <com.amazon.device.ads.AdLayout
+        android:id="@+id/amazonAd"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="1"
+        android:layout_gravity="center|bottom"/>
+
+
+</LinearLayout>
